--- a/shop/shop/pubspec.yaml
+++ b/shop/shop/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.16.1
+  provider: ^4.2.0
+  http: ^0.12.2
+  shared_preferences: ^0.5.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -32,8 +35,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  provider: ^4.2.0
-  http: ^0.12.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
