--- a/chatApp/pubspec.yaml
+++ b/chatApp/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cloud_firestore: ^0.13.7
   cupertino_icons: ^0.1.3
+  firebase_auth: ^0.16.1
 
 dev_dependencies:
   flutter_test:
